--- a/projects/python_word_analyzer/.devcontainer/devcontainer.json
+++ b/projects/python_word_analyzer/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
 	"service": "app",
 	"remoteUser": "vscode",
 	"updateRemoteUserUID": false,
+	"postCreateCommand": "uv sync",
 	"customizations": {
 		"vscode": {
 			"settings": {
