chore: fix typo

--- a/projects/python_word_analyzer/.devcontainer/compose.yml
+++ b/projects/python_word_analyzer/.devcontainer/compose.yml
@@ -5,4 +5,4 @@ services:
       dockerfile: ../../../docker/python/Dockerfile
     tty: true
     volumes:
-      - ../../../:/workspace:cache
+      - ../../../:/workspace:cached
