feat: docling example

--- a/projects/python_docling/pyproject.toml
+++ b/projects/python_docling/pyproject.toml
@@ -3,5 +3,7 @@ name = "python-docling"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+requires-python = ">=3.12"
+dependencies = [
+    "docling>=2.4.2",
+]
