--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,9 +30,9 @@
 				"ms-python.black-formatter",
 				"ms-python.flake8",
 				"ms-python.isort",
-				"ms-python.mypy-type-checker",
 				"eamodio.gitlens",
-				"mhutchie.git-graph"
+				"mhutchie.git-graph",
+				"tomoki1207.pdf"
 			]
 		}
 	}
