--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -8,6 +8,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@hono/vite-dev-server": "^0.18.0"
+		"@hono/vite-dev-server": "^0.18.0",
+		"vite": "^6.0.7"
 	}
 }
