--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -1,14 +1,21 @@
 {
 	"name": "hono-react",
+	"type": "module",
 	"scripts": {
-		"dev": "bun run --hot src/index.tsx"
+		"dev": "vite --host 127.0.0.1"
 	},
 	"dependencies": {
-		"hono": "^4.6.16"
+		"@hono/zod-validator": "^0.4.2",
+		"hono": "^4.6.16",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@hono/vite-dev-server": "^0.18.0",
+		"@types/react": "^19.0.4",
+		"@types/react-dom": "^19.0.2",
 		"vite": "^6.0.7"
 	}
 }
