--- a/projects/hono-react/tsconfig.json
+++ b/projects/hono-react/tsconfig.json
@@ -1,7 +1,10 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
-  }
+	"compilerOptions": {
+		"target": "ESNext",
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
+		"strict": true,
+		"jsx": "react-jsx",
+		"jsxImportSource": "react"
+	}
 }
