--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -20,6 +20,9 @@
 		"@tanstack/router-plugin": "^1.95.3",
 		"@types/react": "^19.0.4",
 		"@types/react-dom": "^19.0.2",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.17",
 		"vite": "^6.0.7"
 	}
 }
