--- a/projects/hono-react/.devcontainer/devcontainer.json
+++ b/projects/hono-react/.devcontainer/devcontainer.json
@@ -12,7 +12,20 @@
         "editor.tabSize": 2,
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "biomejs.biome",
-        "biome.lspBin": "./node_modules/.bin/biome"
+        "biome.lspBin": "./node_modules/.bin/biome",
+        // for Tailwind CSS --
+        "files.associations": {
+          "*.css": "tailwindcss"
+        },
+        "emeraldwalk.runonsave": {
+          "commands": [
+            {
+              "match": "\\.(ts|tsx|js|jsx|html)$",
+              "cmd": "bunx @biomejs/biome lint \"${file}\" --write --unsafe"
+            }
+          ]
+        }
+        // -- for Tailwind CSS
       },
       "extensions": [
         "biomejs.biome",
@@ -20,7 +33,13 @@
         "formulahendry.auto-rename-tag",
         "mhutchie.git-graph",
         "eamodio.gitlens",
-        "oderwat.indent-rainbow"
+        "oderwat.indent-rainbow",
+        // for Tailwind CSS --
+        "shardulm94.trailing-spaces",
+        "emeraldwalk.RunOnSave",
+        "bradlc.vscode-tailwindcss",
+        "stivo.tailwind-fold"
+        // -- for Tailwind CSS
       ]
     }
   }
