--- a/projects/hono-react/biome.json
+++ b/projects/hono-react/biome.json
@@ -11,7 +11,7 @@
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab"
+		"indentStyle": "space"
 	},
 	"organizeImports": {
 		"enabled": true
@@ -19,7 +19,17 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"nursery": {
+				"useSortedClasses": {
+					"level": "error",
+					"fix": "unsafe",
+					"options": {
+						"attributes": ["className", "tw"],
+						"functions": ["tw"]
+					}
+				}
+			}
 		}
 	},
 	"javascript": {
