--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -1,28 +1,29 @@
 {
-	"name": "hono-react",
-	"type": "module",
-	"scripts": {
-		"dev": "vite --host 127.0.0.1",
-		"format": "biome format --write ./src"
-	},
-	"dependencies": {
-		"@hono/zod-validator": "^0.4.2",
-		"@tanstack/react-router": "^1.95.3",
-		"hono": "^4.6.16",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"zod": "^3.24.1"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"@hono/vite-dev-server": "^0.18.0",
-		"@tanstack/router-devtools": "^1.95.3",
-		"@tanstack/router-plugin": "^1.95.3",
-		"@types/react": "^19.0.4",
-		"@types/react-dom": "^19.0.2",
-		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.17",
-		"vite": "^6.0.7"
-	}
+  "name": "hono-react",
+  "type": "module",
+  "scripts": {
+    "dev": "vite --host 127.0.0.1",
+    "lint": "biome lint ./src",
+    "format": "biome format --write ./src"
+  },
+  "dependencies": {
+    "@hono/zod-validator": "^0.4.2",
+    "@tanstack/react-router": "^1.95.3",
+    "hono": "^4.6.16",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@hono/vite-dev-server": "^0.18.0",
+    "@tanstack/router-devtools": "^1.95.3",
+    "@tanstack/router-plugin": "^1.95.3",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.0.7"
+  }
 }
