feat: chat ui for openai with stream

--- a/projects/hono-react/.devcontainer/devcontainer.json
+++ b/projects/hono-react/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   },
   "remoteUser": "vscode",
   "updateRemoteUserUID": false,
-  "postCreateCommand": "bun i",
+  "postCreateCommand": "bun i && cp .env.example .env",
   "customizations": {
     "vscode": {
       "settings": {
