--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -2,7 +2,7 @@
   "name": "hono-react",
   "type": "module",
   "scripts": {
-    "dev": "vite --mode dev --host 127.0.0.1",
+    "dev": "dotenv -- vite --mode dev --host 127.0.0.1",
     "build": "vite build",
     "start": "NODE_ENV=production bunx tsx ./src/node-server.ts",
     "lint": "biome lint ./src",
@@ -25,6 +25,7 @@
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
+    "dotenv-cli": "^8.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.7"
