--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -20,15 +20,15 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@hono/vite-dev-server": "^0.18.1",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/router-devtools": "^1.97.14",
     "@tanstack/router-plugin": "^1.97.14",
     "@types/node": "^22.10.10",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "autoprefixer": "^10.4.20",
     "dotenv-cli": "^8.0.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "vite": "^6.0.11"
   }
 }
