--- a/projects/react-router-v7-example/package.json
+++ b/projects/react-router-v7-example/package.json
@@ -18,12 +18,13 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.3",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^22.10.10",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
