--- a/projects/react-markdown-preview/package.json
+++ b/projects/react-markdown-preview/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uiw/react-markdown-preview": "^5.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
