--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -12,6 +12,7 @@
     "@hono/node-server": "^1.13.8",
     "@hono/zod-validator": "^0.4.2",
     "@tanstack/react-router": "^1.99.9",
+    "@uiw/react-markdown-preview": "^5.1.3",
     "hono": "^4.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
