--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "@hono/zod-validator": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router": "^1.99.9",
-    "@uiw/react-markdown-preview": "^5.1.3",
     "hono": "^4.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
