feat: add ability to cancel message stream

--- a/projects/hono-react/biome.json
+++ b/projects/hono-react/biome.json
@@ -24,6 +24,9 @@
       "correctness": {
         "useExhaustiveDependencies": "off"
       },
+      "suspicious": {
+        "noArrayIndexKey": "off"
+      },
       "nursery": {
         "useSortedClasses": {
           "level": "error",
