--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "dotenv-cli": "^8.0.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.4",
