feat: migrate to `@hono/standard-validator`

--- a/projects/hono-react/package.json
+++ b/projects/hono-react/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
-    "@hono/zod-validator": "^0.4.2",
+    "@hono/standard-validator": "^0.1.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router": "^1.102.1",
     "hono": "^4.7.0",
