--- a/.github/workflows/detect-changed-directories.yaml
+++ b/.github/workflows/detect-changed-directories.yaml
@@ -1,4 +1,4 @@
-name: Push Event Workflow
+name: Detect Changed Directories
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  detect-changes:
     runs-on: ubuntu-latest
 
     steps:
