--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,3 +41,15 @@ jobs:
         run: |
           # 変更があったプロジェクトの Dockerfile を使用して Docker イメージをビルド
           docker build -t ${{ env.BUILD_PROJECT }}:latest projects/${{ env.BUILD_PROJECT }}
+
+      - name: Get Docker Image Size
+        if: env.BUILD_PROJECT != ''
+        run: |
+          # ビルドしたイメージのサイズを取得して出力
+          IMAGE_ID=$(docker images -q myimage:${{ env.BUILD_PROJECT }})
+          IMAGE_SIZE=$(docker inspect --format='{{.Size}}' $IMAGE_ID)
+          echo "Image size: $IMAGE_SIZE bytes"
+
+          # サイズをMB単位で表示
+          IMAGE_SIZE_MB=$(echo "scale=2; $IMAGE_SIZE / 1024 / 1024" | bc)
+          echo "Image size: $IMAGE_SIZE_MB MB"
