--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -46,7 +46,12 @@ jobs:
         if: env.BUILD_PROJECT != ''
         run: |
           # ビルドしたイメージのサイズを取得して出力
-          IMAGE_ID=$(docker images -q myimage:${{ env.BUILD_PROJECT }})
+          IMAGE_ID=$(docker images -q ${{ env.BUILD_PROJECT }}:latest)
+          if [ -z "$IMAGE_ID" ]; then
+            echo "Error: Docker image not found."
+            exit 1
+          fi
+          echo "Built Docker Image ID: $IMAGE_ID"
           IMAGE_SIZE=$(docker inspect --format='{{.Size}}' $IMAGE_ID)
           echo "Image size: $IMAGE_SIZE bytes"
 
