fix: nonroot user

--- a/projects/hono-node-server/.devcontainer/Dockerfile
+++ b/projects/hono-node-server/.devcontainer/Dockerfile
@@ -9,3 +9,5 @@ RUN usermod -l vscode node && \
   usermod -d /home/vscode -m vscode
 
 RUN echo 'export PS1="\[\e[1;32m\]\u@\h\[\e[0m\] $ "' >> /home/vscode/.bashrc
+
+USER vscode
