--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hono-react",
+  "name": "portfolio",
   "type": "module",
   "scripts": {
     "dev": "dotenv -- vite --mode dev --host 127.0.0.1",
@@ -24,16 +24,16 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@hono/vite-dev-server": "^0.18.1",
-    "@tailwindcss/postcss": "^4.0.7",
+    "@tailwindcss/postcss": "^4.0.8",
     "@tanstack/router-devtools": "^1.109.2",
     "@tanstack/router-plugin": "^1.109.2",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "dotenv-cli": "^8.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.7",
+    "tailwindcss": "^4.0.8",
     "vite": "^6.1.1"
   }
 }
