--- a/projects/llm-wrapper-api/.devcontainer/devcontainer.json
+++ b/projects/llm-wrapper-api/.devcontainer/devcontainer.json
@@ -29,6 +29,9 @@
         },
         "[jsonl]": {
           "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "[markdown]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
         }
       },
       "extensions": [
