--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,8 +2,8 @@ name: Docker Build on Project Changes
 
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
 
 jobs:
   docker-build-if-changes-detected:
@@ -35,6 +35,14 @@ jobs:
               echo "BUILD_PROJECT=$project" >> $GITHUB_ENV
             fi
           done < changed_projects.txt
+
+      - name: Log in to GitHub Container Registry
+        if: env.BUILD_PROJECT != ''
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          token: ${{ secrets.PRIVATE_REPO_TOKEN }}
 
       - name: Build Docker Image
         if: env.BUILD_PROJECT != ''
