--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          token: ${{ secrets.PRIVATE_REPO_TOKEN }}
+          password: ${{ secrets.PRIVATE_REPO_TOKEN }}
 
       - name: Build Docker Image
         if: env.BUILD_PROJECT != ''
