--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -47,14 +47,20 @@ jobs:
       - name: Build Docker Image
         if: env.BUILD_PROJECT != ''
         run: |
-          # 変更があったプロジェクトの Dockerfile を使用して Docker イメージをビルド
-          docker build -t ${{ env.BUILD_PROJECT }}:latest projects/${{ env.BUILD_PROJECT }}
+          # ビルドする Docker イメージの URI を作成
+          GHCR_URI=ghcr.io/${{ github.repository }}/${{ env.BUILD_PROJECT }}:latest
+
+          # 後続のステップで利用できるように、環境変数に GHCR_URI を追加
+          echo "GHCR_URI=$GHCR_URI" >> $GITHUB_ENV
+
+          # 変更があったプロジェクトの Dockerfile を元に Docker イメージをビルド
+          docker build -t $GHCR_URI projects/${{ env.BUILD_PROJECT }}
 
       - name: Get Docker Image Size
         if: env.BUILD_PROJECT != ''
         run: |
           # ビルドしたイメージのサイズを取得して出力
-          IMAGE_ID=$(docker images -q ${{ env.BUILD_PROJECT }}:latest)
+          IMAGE_ID=$(docker images -q ${{ env.GHCR_URI }})
           if [ -z "$IMAGE_ID" ]; then
             echo "Error: Docker image not found."
             exit 1
