--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -69,10 +69,10 @@ jobs:
             exit 1
           fi
 
-          # イメージのサイズを取得して出力
-          IMAGE_SIZE=$(docker inspect --format='{{.Size}}' $IMAGE_ID)
-          echo "Image size: $IMAGE_SIZE bytes"
-
-          # サイズを MB 単位で表示
+          # イメージのサイズを MB 単位で計算して出力
           IMAGE_SIZE_MB=$(echo "scale=2; $IMAGE_SIZE / 1024 / 1024" | bc)
           echo "Image size: $IMAGE_SIZE_MB MB"
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ env.GHCR_URI }}"
