--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,6 +35,9 @@ jobs:
               echo "BUILD_PROJECT=$project" >> $GITHUB_ENV
             fi
           done < changed_projects.txt
+
+      - name: Debug
+        run: |
           echo "BUILD_PROJECT=${{ env.BUILD_PROJECT }}"
 
       - name: Log in to GitHub Container Registry
