--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -55,33 +55,37 @@ jobs:
         if: env.BUILD_PROJECT != ''
         run: |
           IFS=',' read -ra BUILD_PROJECT_ARRAY <<< "${{ env.BUILD_PROJECT }}"
-          echo "array: ${#BUILD_PROJECT_ARRAY[@]}"
+          echo "Build project count: ${#BUILD_PROJECT_ARRAY[@]}"
 
           for project in "${BUILD_PROJECT_ARRAY[@]}"; do
             # ビルドする Docker イメージの URI を作成
             GHCR_URI=ghcr.io/${{ github.repository }}/$project:latest
 
             # 変更があったプロジェクトの Dockerfile を元に Docker イメージをビルド
-            #docker build -t $GHCR_URI projects/$project
             echo "docker build -t $GHCR_URI projects/$project"
+            #docker build -t $GHCR_URI projects/$project
           done
 
-      # - name: Get Docker Image Size
-      #   if: env.BUILD_PROJECT != ''
-      #   run: |
-      #     # ビルドした Docker イメージの URI を出力
-      #     echo "GHCR_URI: ${{ env.GHCR_URI }}"
+      - name: Get Docker Image Size
+        if: env.BUILD_PROJECT != ''
+        run: |
+          IFS=',' read -ra BUILD_PROJECT_ARRAY <<< "${{ env.BUILD_PROJECT }}"
 
-      #     # ビルドしたイメージの ID を取得
-      #     IMAGE_ID=$(docker images -q ${{ env.GHCR_URI }})
-      #     if [ -z "$IMAGE_ID" ]; then
-      #       echo "Error: Docker image not found."
-      #       exit 1
-      #     fi
+          for project in "${BUILD_PROJECT_ARRAY[@]}"; do
+            # ビルドした Docker イメージの URI を取得
+            GHCR_URI=ghcr.io/${{ github.repository }}/$project:latest
 
-      #     # イメージのサイズを MB 単位で計算して出力
-      #     IMAGE_SIZE_MB=$(echo "scale=2; $IMAGE_SIZE / 1024 / 1024" | bc)
-      #     echo "Image size: $IMAGE_SIZE_MB MB"
+            # ビルドしたイメージの ID を取得
+            IMAGE_ID=$(docker images -q $GHCR_URI)
+            if [ -z "$IMAGE_ID" ]; then
+              echo "Error: Docker image not found."
+              exit 1
+            fi
+
+            # イメージのサイズを MB 単位で計算して出力
+            IMAGE_SIZE_MB=$(echo "scale=2; $IMAGE_SIZE / 1024 / 1024" | bc)
+            echo "Image size: $IMAGE_SIZE_MB MB"
+          done
 
       # - name: Push Docker image
       #   if: env.BUILD_PROJECT != ''
