--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -62,8 +62,7 @@ jobs:
             GHCR_URI=ghcr.io/${{ github.repository }}/$project:latest
 
             # 変更があったプロジェクトの Dockerfile を元に Docker イメージをビルド
-            echo "docker build -t $GHCR_URI projects/$project"
-            #docker build -t $GHCR_URI projects/$project
+            docker build -t $GHCR_URI projects/$project
           done
 
       - name: Get Docker Image Size
