--- a/dev/portfolio/docker-compose.dev.yml
+++ b/dev/portfolio/docker-compose.dev.yml
@@ -1,8 +1,8 @@
 services:
   portfolio:
     container_name: portfolio
-    image: ghcr.io/u7chan/monorepo/portfolio:latest
-    restart: always
+    build:
+      context: ../../projects/portfolio
     ports:
       - 8000:3000
     env_file:
@@ -10,8 +10,8 @@ services:
 
   llm-wrapper-api:
     container_name: llm-wrapper-api
-    image: ghcr.io/u7chan/monorepo/llm-wrapper-api:latest
-    restart: always
+    build:
+      context: ../../projects/llm-wrapper-api
     ports:
       - 8001:8000
     env_file:
