--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -2,6 +2,12 @@ name: Manual Deploy
 
 on:
   workflow_dispatch: # 手動実行トリガー
+    inputs:
+      target:
+        type: choice
+        description: Deploy target
+        options:
+          - portfolio
 
 jobs:
   trigger-deploy:
@@ -12,4 +18,4 @@ jobs:
           curl -X POST -H "Accept: application/vnd.github.everest-preview+json" \
             -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
             https://api.github.com/repos/u7chan/${{ secrets.PRIVATE_REPO_NAME }}/dispatches \
-              -d '{"event_type": "deploy_trigger", "client_payload": { "repository": "'"${{ github.repository }}"'", "ref": "'"${{ github.ref }}"'", "custom_message": "テストテスト" }}'
+              -d '{"event_type": "deploy_trigger", "client_payload": { "repository": "'"${{ github.repository }}"'", "ref": "'"${{ github.ref }}"'", "target": "'"${{ github.event.inputs.target }}"'" }}'
