--- a/docker/portfolio/docker-compose.yml
+++ b/docker/portfolio/docker-compose.yml
@@ -5,9 +5,8 @@ services:
     restart: always
     ports:
       - 8000:3000
-    environment:
-      - OPENAI_API_KEY
-      - DEEPSEEK_API_KEY
+    env_file:
+      - .env
 
   llm-wrapper-api:
     container_name: llm-wrapper-api
@@ -15,3 +14,5 @@ services:
     restart: always
     ports:
       - 8001:8000
+    env_file:
+      - .env
