--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -57,13 +57,15 @@ jobs:
           IFS=',' read -ra BUILD_PROJECT_ARRAY <<< "${{ env.BUILD_PROJECT }}"
           echo "Build project count: ${#BUILD_PROJECT_ARRAY[@]}"
 
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+
           for project in "${BUILD_PROJECT_ARRAY[@]}"; do
             # ビルドする Docker イメージの URI を作成
             GHCR_URI=ghcr.io/${{ github.repository }}/$project:latest
 
             # 変更があったプロジェクトの Dockerfile を元に Docker イメージをビルド
             echo "docker build -t $GHCR_URI projects/$project"
-            docker build -t $GHCR_URI projects/$project
+            docker build --build-arg COMMIT_HASH=$COMMIT_HASH -t $GHCR_URI projects/$project
           done
 
       - name: Show Docker Images
