feat: embed version in the api

--- a/projects/llm-wrapper-api/Dockerfile
+++ b/projects/llm-wrapper-api/Dockerfile
@@ -1,7 +1,11 @@
 FROM python:3.13-alpine AS base
 
 ARG USERNAME=pyuser
+ARG COMMIT_HASH=""
 
+# -----------------------------------------------
+# builder stage
+# -----------------------------------------------
 FROM base AS builder
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
@@ -10,12 +14,17 @@ COPY . .
 
 RUN uv sync --frozen --no-dev
 
+# -----------------------------------------------
+# runner stage
+# -----------------------------------------------
 FROM base AS runner
 
 ARG USERNAME
+ARG COMMIT_HASH
 
 ENV TZ=Asia/Tokyo
 ENV PATH="/app/.venv/bin:$PATH"
+ENV APP_VERSION=${COMMIT_HASH}
 
 WORKDIR /app
 
