feat: Add main.py under the app directory

--- a/projects/llm-wrapper-api/Dockerfile
+++ b/projects/llm-wrapper-api/Dockerfile
@@ -31,7 +31,7 @@ WORKDIR /app
 RUN adduser -D $USERNAME
 
 COPY --from=builder --chown=$USERNAME:$USERNAME /app/.venv ./.venv
-COPY --from=builder --chown=$USERNAME:$USERNAME /app/main.py ./main.py
+COPY --from=builder --chown=$USERNAME:$USERNAME /app/app ./app
 
 USER $USERNAME
 
