--- a/projects/llm-wrapper-api/pyproject.toml
+++ b/projects/llm-wrapper-api/pyproject.toml
@@ -8,3 +8,9 @@ dependencies = [
     "fastapi>=0.115.8",
     "uvicorn>=0.34.0",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
+]
