--- a/projects/llm-wrapper-api/.vscode/launch.json
+++ b/projects/llm-wrapper-api/.vscode/launch.json
@@ -9,6 +9,15 @@
       "args": ["app.main:app", "--reload", "--host", "0.0.0.0"],
       "console": "integratedTerminal",
       "justMyCode": true
+    },
+    {
+      "name": "Run test",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "pytest",
+      "args": ["-v", "${workspaceFolder}/tests"],
+      "console": "integratedTerminal",
+      "justMyCode": true
     }
   ]
 }
