--- a/projects/llm-wrapper-api/.vscode/launch.json
+++ b/projects/llm-wrapper-api/.vscode/launch.json
@@ -18,6 +18,15 @@
       "args": ["-v", "${workspaceFolder}/tests"],
       "console": "integratedTerminal",
       "justMyCode": true
+    },
+    {
+      "name": "Run test with coverage",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "pytest",
+      "args": ["-v", "--cov", "${workspaceFolder}/tests"],
+      "console": "integratedTerminal",
+      "justMyCode": true
     }
   ]
 }
