--- a/.github/actions/get-changed-directories/action.yml
+++ b/.github/actions/get-changed-directories/action.yml
@@ -6,10 +6,8 @@ runs:
     - name: Get changed directories
       shell: bash
       run: |
-        ls -la
-        # 最新のコミットとその1つ前のコミットの差分を取得
-        git diff --name-only HEAD HEAD~1 | \
-        # 変更されたファイルがどのプロジェクトに属するかを確認
-        grep '^projects/' | \
-        awk -F/ '{print $2}' | \
-        sort -u > changed_projects.txt
+        projects_dir="projects"
+
+        # 最新のコミットとその1つ前のコミットの差分を取得し、
+        # 変更されたファイルがどのプロジェクトに属するかをファイルに出力
+        git diff --name-only HEAD HEAD~1 | grep '^${projects_dir}/' | awk -F/ '{print $2}' | sort -u > changed_projects.txt
