--- a/.github/actions/get-changed-directories/action.yml
+++ b/.github/actions/get-changed-directories/action.yml
@@ -7,12 +7,11 @@ runs:
       shell: bash
       run: |
         set -x
-        ls -la
-        whoami
-        echo "hoge" > a.txt
-        cat a.txt
         projects_dir="projects"
 
         # 最新のコミットとその1つ前のコミットの差分を取得し、
         # 変更されたファイルがどのプロジェクトに属するかをファイルに出力
-        git diff --name-only HEAD HEAD~1 | grep '^${projects_dir}/' | awk -F/ '{print $2}' | sort -u > changed_projects.txt
+        echo "projects_dir: $projects_dir"
+        git diff --name-only HEAD HEAD~1
+        git diff --name-only HEAD HEAD~1 | grep '^${projects_dir}/'
+        git diff --name-only HEAD HEAD~1 | grep '^${projects_dir}/' | awk -F/ '{print $2}
