--- a/.github/actions/get-changed-directories/action.yml
+++ b/.github/actions/get-changed-directories/action.yml
@@ -6,12 +6,7 @@ runs:
     - name: Get changed directories
       shell: bash
       run: |
-        set -x
-        projects_dir="projects"
-
-        # 最新のコミットとその1つ前のコミットの差分を取得し、
-        # 変更されたファイルがどのプロジェクトに属するかをファイルに出力
-        echo "projects_dir: $projects_dir"
-        git diff --name-only HEAD HEAD~1
-        git diff --name-only HEAD HEAD~1 | grep '^${projects_dir}/'
-        git diff --name-only HEAD HEAD~1 | grep '^${projects_dir}/' | awk -F/ '{print $2}
+        echo "a" | grep a | awk -F/ '{print $1}'
+        echo "-"
+        echo "a" | grep z | awk -F/ '{print $1}'
+        echo "--"
