--- a/.github/actions/get-changed-directories/action.yml
+++ b/.github/actions/get-changed-directories/action.yml
@@ -6,7 +6,13 @@ runs:
     - name: Get changed directories
       shell: bash
       run: |
-        echo "a" | grep a | awk -F/ '{print $1}'
-        echo "-"
-        echo "a" | grep z | awk -F/ '{print $1}'
-        echo "--"
+        projects_dir="projects"
+
+        # 最新のコミットとその1つ前のコミットの差分を取得
+        git diff --name-only HEAD HEAD~1 | \
+        # 変更されたファイルがどのプロジェクトに属するかを確認
+        awk -F/ '/^$projects_dir\// {print $2}' | \
+        sort -u > changed_projects.txt
+
+        ls -la
+        cat changed_projects.txt
