--- a/.github/actions/get-changed-directories/action.yml
+++ b/.github/actions/get-changed-directories/action.yml
@@ -1,18 +1,16 @@
 name: Get changed directories
-description: "Get a list of unique directories that were changed in the latest commit."
+description: Get a list of unique directories that were changed in the latest commit.
 runs:
   using: composite
   steps:
     - name: Get changed directories
       shell: bash
       run: |
-        projects_dir="projects"
+        PROJECTS_DIR="projects"
 
         # 最新のコミットとその1つ前のコミットの差分を取得
         git diff --name-only HEAD HEAD~1 | \
-        # 変更されたファイルがどのプロジェクトに属するかを確認
-        awk -F/ '/^$projects_dir\// {print $2}' | \
-        sort -u > changed_projects.txt
-
-        ls -la
-        cat changed_projects.txt
+        # projects配下のファイルのディレクトリ名を取得
+        awk -F/ -v dir="$PROJECTS_DIR" '$1 == dir {print $2}' | \
+        # 重複を取り除く
+        sort -u > changed_dirs.txt
