--- a/.github/actions/get-changed-directories/action.yml
+++ b/.github/actions/get-changed-directories/action.yml
@@ -7,7 +7,10 @@ runs:
       shell: bash
       run: |
         PROJECTS_DIR="projects"
-
+        git branch
+        git rev-parse HEAD
+        git log -1
+        git status
         echo "> diff"
         git diff --name-only HEAD HEAD~1
         echo ""
