feat: Standardize action definitions

--- a/.github/actions/build-docker-images/action.yml
+++ b/.github/actions/build-docker-images/action.yml
@@ -1,9 +1,9 @@
-name: Build docker images
+name: Build Docker Images
 description: Building the Dockerfiles for multiple projects.
 runs:
   using: composite
   steps:
-    - name: Build docker images
+    - name: Build Docker Images
       shell: bash
       run: |
         PROJECTS_DIR="projects"
