--- a/.github/actions/get-changed-projects/action.yml
+++ b/.github/actions/get-changed-projects/action.yml
@@ -1,9 +1,9 @@
-name: Get changed projects
+name: Get Changed Projects
 description: Get a list of projects with Dockerfile whose differences have been changed
 runs:
   using: composite
   steps:
-    - name: Get changed projects
+    - name: Get Changed Projects
       shell: bash
       run: |
         PROJECTS_DIR="projects"
