--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,33 +15,20 @@ jobs:
         with:
           fetch-depth: 2 # 最新の2つのコミットをフェッチ
 
-      - name: Get changed directories
-        id: get_changed_dirs
-        run: |
-          # 最新のコミットとその1つ前のコミットの差分を取得
-          git diff --name-only HEAD HEAD~1 | \
-          # 変更されたファイルがどのプロジェクトに属するかを確認
-          grep '^projects/' | \
-          awk -F/ '{print $2}' | \
-          sort -u > changed_projects.txt
+      - name: Get Changed Directories
+        uses: ./.github/actions/get-changed-directories
 
-      - name: Check for Dockerfile changes
-        id: check_dockerfiles
+      - name: Get Changed Projects
+        uses: ./.github/actions/get-changed-projects
+
+      - name: Build Docker Images
+        if: env.BUILD_PROJECT != ''
+        uses: ./.github/actions/build-docker-images
+
+      - name: Show Docker Images
+        if: env.BUILD_PROJECT != ''
         run: |
-          # 変更されたプロジェクトを確認し、Dockerfile が存在するかチェック
-          BUILD_PROJECT=""
-          while read -r project; do
-            if [[ -f "projects/$project/Dockerfile" ]]; then
-              echo "Dockerfile found in $project"
-              if [ -z "$BUILD_PROJECT" ]; then
-                BUILD_PROJECT="$project"
-              else
-                BUILD_PROJECT="$BUILD_PROJECT,$project"
-              fi
-            fi
-          done < changed_projects.txt
-          echo "BUILD_PROJECT: $BUILD_PROJECT"
-          echo "BUILD_PROJECT=$BUILD_PROJECT" >> $GITHUB_ENV
+          docker images
 
       - name: Log in to GitHub Container Registry
         if: env.BUILD_PROJECT != ''
@@ -50,28 +37,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.PRIVATE_REPO_TOKEN }}
-
-      - name: Build Docker Images
-        if: env.BUILD_PROJECT != ''
-        run: |
-          IFS=',' read -ra BUILD_PROJECT_ARRAY <<< "${{ env.BUILD_PROJECT }}"
-          echo "Build project count: ${#BUILD_PROJECT_ARRAY[@]}"
-
-          COMMIT_HASH=$(git rev-parse --short HEAD)
-
-          for project in "${BUILD_PROJECT_ARRAY[@]}"; do
-            # ビルドする Docker イメージの URI を作成
-            GHCR_URI=ghcr.io/${{ github.repository }}/$project:latest
-
-            # 変更があったプロジェクトの Dockerfile を元に Docker イメージをビルド
-            echo "docker build -t $GHCR_URI projects/$project"
-            docker build --build-arg COMMIT_HASH=$COMMIT_HASH -t $GHCR_URI projects/$project
-          done
-
-      - name: Show Docker Images
-        if: env.BUILD_PROJECT != ''
-        run: |
-          docker images
 
       - name: Push Docker Images
         if: env.BUILD_PROJECT != ''
