--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -13,7 +13,7 @@ jobs:
   trigger-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Send repository_dispatch to private repo
+      - name: Send repository_dispatch To Private Repository
         run: |
           curl -X POST -H "Accept: application/vnd.github.everest-preview+json" \
             -H "Authorization: token ${{ secrets.PRIVATE_REPO_TOKEN }}" \
