--- a/projects/llm-wrapper-api/Dockerfile
+++ b/projects/llm-wrapper-api/Dockerfile
@@ -22,7 +22,7 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 COPY --from=base /app .
 
 RUN uv sync
-RUN python -m pytest -s --vv --tb=short --cov
+RUN python -m pytest -s -vv --tb=short --cov
 
 # -----------------------------------------------
 # builder stage
