--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,7 +25,7 @@ jobs:
         if: env.BUILD_PROJECT != ''
         uses: ./.github/actions/build-docker-images
         with:
-          target: final
+          stage: final
 
       - name: Show Docker Images
         if: env.BUILD_PROJECT != ''
