--- a/.github/workflows/pullrequest-check.yml
+++ b/.github/workflows/pullrequest-check.yml
@@ -25,7 +25,7 @@ jobs:
         if: env.BUILD_PROJECT != ''
         uses: ./.github/actions/build-docker-images
         with:
-          target: test
+          stage: test
 
       - name: Show Docker Images
         if: env.BUILD_PROJECT != ''
