--- a/.github/actions/build-docker-images/action.yml
+++ b/.github/actions/build-docker-images/action.yml
@@ -22,6 +22,13 @@ runs:
           GHCR_URI=ghcr.io/${{ github.repository }}/$PROJECT:latest
 
           # 変更があったプロジェクトの Dockerfile を元に Docker イメージをビルド
-          echo "docker build -t $GHCR_URI --target=${{ inputs.stage }} $PROJECTS_DIR/$PROJECT"
-          docker build --build-arg COMMIT_HASH=$COMMIT_HASH -t $GHCR_URI --target=${{ inputs.stage }} $PROJECTS_DIR/$PROJECT
+          PROJECT_DIR=$PROJECTS_DIR/$PROJECT
+          DOCKER_FILE=$PROJECT_DIR/Dockerfile
+          TARGET_STAGE=${{ inputs.stage }}
+          if awk -v search="$TARGET_STAGE" '$0 ~ search' "$DOCKER_FILE" > /dev/null; then
+            docker build --build-arg COMMIT_HASH=$COMMIT_HASH -t $GHCR_URI --target=$TARGET_STAGE $PROJECT_DIR
+          else
+            # 指定したステージが Dockerfile で未定義のため、オプションを指定せずにビルド
+            docker build --build-arg COMMIT_HASH=$COMMIT_HASH -t $GHCR_URI $PROJECT_DIR
+          fi
         done
